--- a/ford.html
+++ b/ford.html
@@ -40,6 +40,7 @@
             color: white;
             text-decoration: none;
             border-radius: 5px;
+            background: url('car.jpg') no-repeat center center fixed;
         }
     </style>
 </head>
