--- a/toyota.html
+++ b/toyota.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 20px;
             background-color: #f5f5f5;
+            background: url('car.jpg') no-repeat center center fixed;
         }
         .header {
             font-size: 30px;
@@ -40,6 +41,7 @@
             color: white;
             text-decoration: none;
             border-radius: 5px;
+            
         }
     </style>
 </head>
